--- a/src/styles/_ngx-bootstrap.scss
+++ b/src/styles/_ngx-bootstrap.scss
@@ -21,6 +21,7 @@
 @import './ngx-bootstrap/nav';
 @import './ngx-bootstrap/modal';
 @import './ngx-bootstrap/datepicker';
+@import './ngx-bootstrap/tables';
 
 
 @include text-emphasis-variant(".text-highlight", $ux-color-highlight);
