--- a/src/app/core/teams/add-members-modal/add-members-modal.component.html
+++ b/src/app/core/teams/add-members-modal/add-members-modal.component.html
@@ -37,21 +37,19 @@
 			</thead>
 
 			<tbody>
-			<tr *ngFor="let invited of addedMembers; let i = index" class="table-row" [class.invalid]="invited.invalid">
-				<td><div class="hide-overflow fixed-column" [attr.title]="invited.username">{{ invited.username }}</div></td>
+			<tr *ngFor="let invited of addedMembers; let i = index" class="table-row">
+				<td><div class="hide-overflow" [attr.title]="invited.username">{{ invited.username }}</div></td>
 				<td>
-					<div>
-						<div class="btn-group dropdown" dropdown>
-							<button type="button" class="btn dropdown-toggle dropdown-toggle-table" dropdownToggle>
-								<span class="float-left mr-1">{{ invited.roleDisplay }}</span>
-							</button>
+					<div class="dropdown dropdown-table-inline" dropdown>
+						<span class="dropdown-toggle" dropdownToggle>
+							<span class="mr-1">{{ invited.roleDisplay }}</span>
+						</span>
 
-							<ul *dropdownMenu class="dropdown-menu" role="menu">
-								<li *ngFor="let role of teamRoleOptions" [value]="role.role" (click)="updateRoleSelection(i, role.role)">
-									<a class="dropdown-item">{{ role.label }}</a>
-								</li>
-							</ul>
-						</div>
+						<ul *dropdownMenu class="dropdown-menu" role="menu">
+							<li *ngFor="let role of teamRoleOptions" [value]="role.role" (click)="updateRoleSelection(i, role.role)">
+								<a class="dropdown-item">{{ role.label }}</a>
+							</li>
+						</ul>
 					</div>
 				</td>
 				<td>
