--- a/src/app/core/teams/list-team-members/list-team-members.component.html
+++ b/src/app/core/teams/list-team-members/list-team-members.component.html
@@ -1,16 +1,13 @@
-<section class="pt-3">
-	<h3 class="pb-3">
-		Team Members
-
-		<div class="float-right" *ngIf="canManageTeam">
-			<button type="button" class="btn btn-sm btn-primary" (click)="addMembers()"><span class="fa fa-plus"></span> Add New</button>
-		</div>
-	</h3>
-
+<section>
 	<!-- Search Input -->
-	<search-table placeholder="Search team members..." (applySearch)="searchEvent$.next($event)"></search-table>
+	<div class="d-flex mb-3 align-items-center">
+		<asy-search-input placeholder="Search..." (applySearch)="searchEvent$.next($event)"></asy-search-input>
+		<button *ngIf="canManageTeam" (click)="addMembers()" type="button" class="btn btn-primary ml-auto">
+			<span class="fa fa-plus"></span> Add New
+		</button>
+	</div>
 
-	<pageable-table [items]="items" [hasItems]="hasItems" [pagingOptions]="pagingOptions" (pageChange)="pageEvent$.next($event)">
+	<pageable-table [items]="items" [hasItems]="hasItems" [pagingOptions]="pagingOptions" [tableStriped]="true" (pageChange)="pageEvent$.next($event)">
 		<ng-template #tableHeader>
 			<th *ngFor="let header of headersToShow">
 				<sortable-table-header [header]="header" [currentSortField]="pagingOptions.sortField" [currentSortDir]="pagingOptions.sortDir" (sortChange)="sortEvent$.next($event)"></sortable-table-header>
@@ -30,26 +27,17 @@
 
 			<!-- Active -->
 			<td>
-				<div>
-					{{ member.active ? 'Active': 'Not Active' }}
-				</div>
-			</td>
-
-			<!-- Bypassed -->
-			<td *ngIf="isUserAdmin">
-				<div>
-					{{ member.userModel.bypassAccessCheck ? 'Yes': 'No' }}
-				</div>
+				<div>{{ member.active ? 'Active': 'Not Active' }}</div>
 			</td>
 
 			<!-- Role -->
 			<td>
 				<div *ngIf="!canManageTeam">{{ member.roleDisplay }}</div>
-				<div *ngIf="canManageTeam">
-					<div class="btn-group dropdown" container="body" dropdown>
-						<button type="button" class="btn dropdown-toggle dropdown-toggle-table" dropdownToggle>
-							<span class="float-left mr-1">{{ member.roleDisplay }}</span>
-						</button>
+				<ng-container *ngIf="canManageTeam">
+					<div class="dropdown dropdown-table-inline" dropdown container="body">
+						<span class="dropdown-toggle" dropdownToggle>
+							<span class="mr-1">{{ member.roleDisplay }}</span>
+						</span>
 
 						<ul *dropdownMenu class="dropdown-menu" role="menu">
 							<li *ngFor="let role of teamRoleOptions" [value]="role.role" (click)="updateRole(member, role.role)">
@@ -57,7 +45,7 @@
 							</li>
 						</ul>
 					</div>
-				</div>
+				</ng-container>
 			</td>
 
 			<!-- Delete -->
