--- a/src/app/core/teams/view-team/view-team.component.html
+++ b/src/app/core/teams/view-team/view-team.component.html
@@ -1,37 +1,107 @@
 <section>
 
-	<!-- Show a breadcrumb to the list teams page -->
-	<a class="back-link" routerLink="/teams">
-		<span class="fa fa-angle-double-left"></span> Back to Teams
-	</a>
-
 	<!-- Alert Notifications -->
 	<system-alert></system-alert>
 
-	<!-- Team Name and Delete Button -->
-	<h2 class="pt-2">
-		{{ team.name }}
-		<button type="button" class="btn btn-sm btn-primary float-right" (click)="remove()" *ngIf="canManageTeam">
-			<span class="fa fa-trash"></span> Delete Team
-		</button>
-	</h2>
-
-	<!-- Team Description and Create Date -->
-	<div>
-		<div>{{ team.description }}</div>
-		<div>Date Created: {{ team.created | utcDate:'MM/DD/YYYY' }}</div>
+	<!-- Show a breadcrumb to the list teams page -->
+	<div class="mb-3">
+		<a class="back-link mb-1" routerLink="/teams">
+			<span class="fa fa-angle-double-left"></span> Back to Teams
+		</a>
 	</div>
 
-	<!-- Tabs -->
-	<div class="mt-3">
-		<tabset type="tabs">
-			<tab heading="Members">
-				<list-team-members [team]="team"></list-team-members>
-			</tab>
-			<tab heading="Settings" *ngIf="canManageTeam">
-				<edit-team-metadata [team]="team" (metadataUpdated)="updateTeam($event)"></edit-team-metadata>
-			</tab>
-		</tabset>
-	</div>
+	<ng-container *ngIf="team; else noTeam">
+		<div class="d-flex mb-3">
+			<h1>{{ team.name }} (Date Created: {{ team.created | utcDate:'MM/DD/YYYY' }})</h1>
+			<button type="button" class="btn btn-link ml-auto" (click)="remove()" *ngIf="canManageTeam">
+				Delete Team
+			</button>
+		</div>
 
+		<div class="cards row">
+			<div class="col-xl-8 mb-3">
+				<div class="card">
+					<div class="card-header d-flex align-items-center">
+						<h2>Members</h2>
+					</div>
+					<div class="card-body">
+						<list-team-members [team]="team"></list-team-members>
+					</div>
+				</div>
+			</div>
+
+			<div class="col-xl-4">
+				<div class="card">
+					<div class="card-header d-flex align-items-center">
+						<h2>Settings
+							<button type="button" *ngIf="canManageTeam" [disabled]="isEditing" (click)="edit()" class="btn btn-outline-secondary ml-3">
+								<span class="fa fa-lg fa-pencil"></span>
+							</button>
+						</h2>
+
+					</div>
+					<div class="card-body overview-body" [ngClass]="{'editing': isEditing}">
+						<ng-container *ngIf="!isEditing; else fieldsForEditing" [ngTemplateOutlet]="fields"
+									  [ngTemplateOutletContext]="{team:team}">
+						</ng-container>
+					</div>
+				</div>
+			</div>
+		</div>
+	</ng-container>
 </section>
+
+<ng-template #fields>
+	<h3>Basic Information</h3>
+	<table class="table table-striped table-inline-editable mb-0">
+		<tbody>
+		<tr>
+			<td>Name</td>
+			<td><span>{{ team.name }}</span></td>
+		</tr>
+		<tr>
+			<td>Description</td>
+			<td><span>{{ team.description }}</span></td>
+		</tr>
+		</tbody>
+	</table>
+</ng-template>
+
+<ng-template #fieldsForEditing>
+	<form id="edit-team-form" #editTeamForm="ngForm">
+		<span class="inline-edit-header-btns float-right" style="margin-top: -4.5rem">
+			<button type="button" (click)="cancelEdit()" class="btn btn-outline-secondary">Cancel</button>
+			<button [disabled]="!editTeamForm.form.valid" type="button" (click)="saveEdit()"
+					class="btn btn-primary ml-2">Save</button>
+		</span>
+		<h3>Basic Information</h3>
+		<table class="table table-striped table-inline-edit mb-0">
+			<tbody>
+			<tr>
+				<td>Name</td>
+				<td>
+					<input class="form-control" placeholder="Enter name" name="name"
+						   [(ngModel)]="_team.name" />
+				</td>
+			</tr>
+			<tr>
+				<td>Description</td>
+				<td>
+					<textarea class="form-control" placeholder="Enter description" name="description"
+							  [(ngModel)]="_team.description">
+					</textarea>
+				</td>
+			</tr>
+			</tbody>
+		</table>
+	</form>
+	<div class="inline-edit-btns text-right">
+		<button type="button" (click)="cancelEdit()" class="btn btn-outline-secondary">Cancel</button>
+		<button [disabled]="!editTeamForm.form.valid" type="button" (click)="saveEdit()"
+				class="btn btn-primary ml-2">Save</button>
+	</div>
+</ng-template>
+
+<ng-template #noTeam>
+	Error: Team not found
+</ng-template>
