--- a/src/app/core/feedback/feedback-flyout/feedback-flyout.component.html
+++ b/src/app/core/feedback/feedback-flyout/feedback-flyout.component.html
@@ -71,7 +71,7 @@
 				</div>
 				<div class="mb-2" *ngIf="feedback.subType === 'Other'">
 					<input class="form-control" name="other-description"
-						   [(ngModel)]="otherText" required/>
+						   [(ngModel)]="feedback.otherText" required/>
 				</div>
 
 				<div class="form-check pl-0">
