refactor: Update various components for consistent style and improved useability
Update various admin list components and admin edit components to ensure consistent code style.
Update various components to ensure h1 is used for page title.
Update various components to ensure span is used for font-awesome icons vs. i.

--- a/src/app/common/paging/sort-controls/sort-controls.component.html
+++ b/src/app/common/paging/sort-controls/sort-controls.component.html
@@ -6,10 +6,10 @@
 		   [class.selected]="selectedKey === option.value.sortField"
 		   (click)="updateSort(option.key)">{{ option.value.label }}
 			<span *ngIf="showDirectionControl && selectedKey === option.value.sortField" style="display: inline-block">
-				<i *ngIf="selectedDir==='DESC'"
-				   class="fa fa-sort-amount-desc"></i>
-				<i *ngIf="selectedDir==='ASC'"
-				   class="fa fa-sort-amount-asc"></i>
+				<span *ngIf="selectedDir==='DESC'"
+				   class="fa fa-sort-amount-desc"></span>
+				<span *ngIf="selectedDir==='ASC'"
+				   class="fa fa-sort-amount-asc"></span>
 			</span>
 		</button>
 	</span>
