--- a/src/app/core/audit/audit-view-change-modal/audit-view-change-modal.component.html
+++ b/src/app/core/audit/audit-view-change-modal/audit-view-change-modal.component.html
@@ -7,7 +7,7 @@
 				   tooltip="Close"
 				   placement="bottom"
 				   container="body">
-				   <i class="fa fa-times"></i>
+				   <span class="fa fa-times"></span>
 				</a>
 			</span>
 	</h3>
