--- a/src/app/site/example/forms/forms.component.html
+++ b/src/app/site/example/forms/forms.component.html
@@ -1,5 +1,7 @@
 <form style="max-width: 800px;">
 
+	<h1 class="pb-3">Bootstrap Form Examples</h1>
+
 	<h2>Form Controls</h2>
 	<div class="form-group">
 		<label for="exampleFormControlText" class="form-required">Example text</label>
@@ -41,7 +43,7 @@
 
 	<h2 class="pt-3">Checkboxes and radios</h2>
 
-	<h5 class="pt-2">Default (stacked)</h5>
+	<h3 class="pt-2">Default (stacked)</h3>
 	<div class="form-group">
 		<div class="form-check">
 			<input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
@@ -96,7 +98,7 @@
 		</div>
 	</div>
 
-	<h5 class="pt-2">Inline</h5>
+	<h3 class="pt-2">Inline</h3>
 	<div class="form-group">
 		<div class="form-check form-check-inline">
 			<input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
@@ -127,7 +129,7 @@
 		</div>
 	</div>
 
-	<h5 class="pt-2">Without labels</h5>
+	<h3 class="pt-2">Without labels</h3>
 	<div class="form-check">
 		<input class="form-check-input position-static" type="checkbox" id="blankCheckbox" value="option1" aria-label="...">
 	</div>
@@ -137,7 +139,7 @@
 
 	<h2 class="pt-3">Buttons</h2>
 
-	<h5 class="pt-2">Standard</h5>
+	<h3 class="pt-2">Standard</h3>
 	<button type="button" class="mr-3 btn btn-primary">Primary</button>
 	<button type="button" class="mr-3 btn btn-secondary">Secondary</button>
 	<button type="button" class="mr-3 btn btn-success">Success</button>
@@ -148,7 +150,7 @@
 	<button type="button" class="mr-3 btn btn-dark">Dark</button>
 	<button type="button" class="mr-3 btn btn-link">Link</button>
 
-	<h5 class="pt-2">Outline Buttons</h5>
+	<h3 class="pt-2">Outline Buttons</h3>
 	<button type="button" class="mr-3 btn btn-outline-primary">Primary</button>
 	<button type="button" class="mr-3 btn btn-outline-secondary">Secondary</button>
 	<button type="button" class="mr-3 btn btn-outline-success">Success</button>
@@ -158,26 +160,26 @@
 	<button type="button" class="mr-3 btn btn-outline-light">Light</button>
 	<button type="button" class="mr-3 btn btn-outline-dark">Dark</button>
 
-	<h5 class="pt-2">Button Tags</h5>
+	<h3 class="pt-2">Button Tags</h3>
 	<a class="mr-3 btn btn-primary" href="#" role="button">Link</a>
 	<button class="mr-3 btn btn-primary" type="submit">Button</button>
 	<input class="mr-3 btn btn-primary" type="button" value="Input">
 	<input class="mr-3 btn btn-primary" type="submit" value="Submit">
 	<input class="mr-3 btn btn-primary" type="reset" value="Reset">
 
-	<h5 class="pt-2">Large Buttons</h5>
+	<h3 class="pt-2">Large Buttons</h3>
 	<button type="button" class="mr-3 btn btn-primary btn-lg">Large button</button>
 	<button type="button" class="mr-3 btn btn-secondary btn-lg">Large button</button>
 
-	<h5 class="pt-2">Small Buttons</h5>
+	<h3 class="pt-2">Small Buttons</h3>
 	<button type="button" class="mr-3 btn btn-primary btn-sm">Small button</button>
 	<button type="button" class="mr-3 btn btn-secondary btn-sm">Small button</button>
 
-	<h5 class="pt-2">Active State</h5>
+	<h3 class="pt-2">Active State</h3>
 	<a href="#" class="mr-3 btn btn-primary active" role="button" aria-pressed="true">Primary Button</a>
 	<a href="#" class="mr-3 btn btn-secondary active" role="button" aria-pressed="true">Secondary Button</a>
 
-	<h5 class="pt-2">Disabled State</h5>
+	<h3 class="pt-2">Disabled State</h3>
 	<button type="button" class="mr-3 btn btn-primary" disabled>Primary button</button>
 	<button type="button" class="mr-3 btn btn-secondary" disabled>Secondary Button</button>
 
