--- a/src/app/core/admin/user-management/manage-user.component.html
+++ b/src/app/core/admin/user-management/manage-user.component.html
@@ -8,9 +8,9 @@
 	<!-- Alert Notifications -->
 	<system-alert></system-alert>
 
-	<form *ngIf="user" #form="ngForm" (ngSubmit)="submit()" autocomplete="off" class="card form-horizontal p-3" style="max-width: 1000px" role="form" novalidate >
+	<form *ngIf="user" #form="ngForm" autocomplete="off" class="pt-3" style="max-width: 1000px" role="form" (ngSubmit)="submit()" novalidate>
 
-		<h2>
+		<h1>
 			{{title}}
 			<small>{{subtitle}}</small>
 
@@ -18,44 +18,42 @@
 			<button [disabled]="refreshing" *ngIf="proxyPki && mode === 'edit'" (click)="refreshCredentials()" class="btn btn-primary btn-sm float-right">
 				<span class="fa fa-refresh"></span> Refresh User Credentials
 			</button>
-		</h2>
+		</h1>
 
 		<!-- Name -->
-		<div class="form-group padding-top-25">
-			<label for="name"><span class="text-danger"><strong>* </strong></span>Name</label>
+		<div class="form-group pt-3">
+			<label for="name" class="form-required">Name</label>
 			<input type="text" class="form-control" id="name" name="name" [(ngModel)]="user.userModel.name" required [disabled]="metadataLocked"/>
 		</div>
 
 		<!-- Username -->
 		<div class="form-group">
-			<label for="username"><span class="text-danger"><strong>* </strong></span>Username</label>
+			<label for="username" class="form-required">Username</label>
 			<input type="text" id="username" name="username" class="form-control" [(ngModel)]="user.userModel.username" required [disabled]="metadataLocked"/>
 		</div>
 
 		<!-- Organization -->
 		<div class="form-group">
-			<label for="organization"><span class="text-danger"><strong>* </strong></span>Organization</label>
+			<label for="organization" class="form-required">Organization</label>
 			<input type="text" class="form-control" id="organization" name="organization" [(ngModel)]="user.userModel.organization" required [disabled]="metadataLocked"/>
 		</div>
 
 		<!-- Email -->
 		<div class="form-group">
-			<label for="email"><span class="text-danger"><strong>* </strong></span>Email</label>
+			<label for="email" class="form-required">Email</label>
 			<input type="email" class="form-control" id="email" name="email" [(ngModel)]="user.userModel.email" required [disabled]="metadataLocked"/>
 		</div>
 
 		<!-- Local Login Information -->
 		<ng-container *ngIf="config.auth === 'local'">
 
-			<div>
-				<h2>
-					Password
-					<small>At least 6 characters. <span *ngIf="mode === 'edit' || mode === 'admin-edit'">Leave blank if you do not want to change the password.</span></small>
-				</h2>
-			</div>
+			<h2 class="pt-3">
+				Password
+				<small>At least 6 characters. <span *ngIf="mode === 'edit' || mode === 'admin-edit'">Leave blank if you do not want to change the password.</span></small>
+			</h2>
 
 			<!-- Current password is needed if you aren't an admin and you're editing -->
-			<div class="form-group" *ngIf="mode === 'edit'">
+			<div class="form-group" class="pt-3" *ngIf="mode === 'edit'">
 				<label for="currentPassword">Current Password</label>
 				<input type="password" name="password" class="form-control" id="currentPassword" [(ngModel)]="user.userModel.currentPassword" autocomplete="off">
 			</div>
@@ -80,15 +78,10 @@
 
 				<!-- Bypass Access Checker -->
 				<div class="form-group">
-					<label class="col-md-2 col-form-label">Access Check</label>
-
-					<div class="col-md-10">
-						<button type="button" class="btn"
-								[ngClass]="{ 'btn-selected': user.userModel.bypassAccessCheck, 'btn-unselected': !user.userModel.bypassAccessCheck }" title="Bypass Access Check"
-								btnCheckbox name="bypassAccessCheck" [(ngModel)]="user.userModel.bypassAccessCheck" (ngModelChange)="bypassAccessCheck()">
-							<span class="fa fa-fw" [ngClass]="{ 'fa-check-square-o': user.userModel.bypassAccessCheck, 'fa-square-o': !user.userModel.bypassAccessCheck }"></span>
-							Bypass Access Check
-						</button>
+					<label>Access Check</label>
+					<div class="form-check m-n1 p-1">
+						<input class="form-check-input" type="checkbox" id="bypassAC" name="bypassAccessCheck" [(ngModel)]="user.userModel.bypassAccessCheck" (ngModelChange)="bypassAccessCheck()">
+						<label class="form-check-label" for="bypassAC">Bypass Access Check</label>
 					</div>
 				</div>
 
@@ -105,12 +98,12 @@
 
 				<div class="form-group">
 					<label for="externalRoles">External Roles</label>
-					<input type="text" class="form-control" id="externalRoles" name="externalRoles" [(ngModel)]="user.userModel.externalRoles" disabled>
+					<textarea type="text" class="form-control" id="externalRoles" name="externalRoles" rows="4" disabled>{{user.userModel.externalRolesDisplay}}</textarea>
 				</div>
 
 				<div class="form-group">
 					<label for="externalGroups">External Groups</label>
-					<input type="text" class="form-control" id="externalGroups" name="externalGroups" [(ngModel)]="user.userModel.externalGroups" disabled>
+					<textarea type="text" class="form-control" id="externalGroups" name="externalGroups" rows="4" disabled>{{user.userModel.externalGroupsDisplay}}</textarea>
 				</div>
 			</ng-container>
 
@@ -119,34 +112,25 @@
 		<!-- Admin only stuff -->
 		<div class="form-group" *ngIf="mode === 'admin-edit' || mode === 'admin-create'">
 			<label>Roles</label>
-			<div class="btn-group">
-				<button *ngFor="let role of possibleRoles"
-						name="role"
-						type="button" class="btn"
-						[ngClass]="{ 'btn-selected': user.userModel.roles && user.userModel.roles[role.role], 'btn-unselected': !user.userModel.roles || !user.userModel.roles[role.role] }"
-						[attr.title]="role.description"
-						[(ngModel)]="user.userModel.roles[role.role]" btnCheckbox>
-					<span class="fa fa-fw" [ngClass]="{ 'fa-check-square-o': user.userModel.roles && user.userModel.roles[role.role], 'fa-square-o': !user.userModel.roles || !user.userModel.roles[role.role] }"></span>
-					{{role.label}}
-				</button>
+			<div>
+				<div *ngFor="let role of possibleRoles" class="form-check form-check-inline" tooltip="{{ role.description }}">
+					<input class="form-check-input" type="checkbox" id="role{{role.role}}Cb" name="role{{role.role}}Cb" [(ngModel)]="user.userModel.roles[role.role]">
+					<label class="form-check-label" for="role{{role.role}}Cb">{{ role.label }}</label>
+				</div>
 			</div>
 		</div>
 
 		<div class="form-group">
-			<div class="float-right">
-				<button type="button" class="btn btn-link" *ngIf="mode === 'admin-create' || mode === 'admin-edit'" routerLink="/admin/users">Cancel</button>
-				<button type="submit" class="btn btn-primary mr-2" [disabled]="okDisabled || !form.form.valid">{{ okButtonText }}</button>
-				<button type="button" class="btn btn-link" *ngIf="mode === 'signup'" routerLink="/signin">or Sign In</button>
+			<div class="text-right">
+				<button type="button" class="btn btn-link mr-2" *ngIf="mode === 'admin-create' || mode === 'admin-edit'" routerLink="/admin/users">Cancel</button>
+				<button type="submit" class="btn btn-primary" [disabled]="okDisabled || !form.form.valid">{{ okButtonText }}</button>
+				<button type="button" class="btn btn-link ml-2" *ngIf="mode === 'signup'" routerLink="/signin">or Sign In</button>
 			</div>
 		</div>
 
 		<!-- Validation errors -->
 		<div class="form-group" *ngIf="error">
-			<div class="float-right">
-				<div class="text-danger">
-					<strong>{{error}}</strong>
-				</div>
-			</div>
+			<div class="text-right text-danger font-weight-bolder">{{ error }}</div>
 		</div>
 
 	</form>
