--- a/src/app/core/messages/admin/manage-message.component.html
+++ b/src/app/core/messages/admin/manage-message.component.html
@@ -2,59 +2,47 @@
 
 	<!-- Show a breadcrumb to the list messages page -->
 	<a *ngIf="mode === 'admin-edit' || mode === 'admin-create'" class="back-link" [routerLink]="['/admin/messages']">
-		<i class="fa fa-angle-double-left"></i> Back to Messages
+		<span class="fa fa-angle-double-left"></span> Back to Messages
 	</a>
 
-	<form *ngIf="message" #form="ngForm" autocomplete="off" class="form-horizontal" role="form" novalidate >
+	<!-- Alert Notifications -->
+	<system-alert></system-alert>
 
-		<div class="page-header">
-			<h2>
-				{{title}}
-				<small>{{subtitle}}</small>
-			</h2>
-		</div>
+	<form *ngIf="message" autocomplete="off" class="pt-3" role="form" (ngSubmit)="submit()" novalidate>
 
-		<!-- Alert Notifications -->
-		<system-alert></system-alert>
+		<h1>
+			{{title}}
+			<small>{{subtitle}}</small>
+		</h1>
 
 		<!-- Type -->
-		<div class="form-group row">
-			<label class="col-md-12" for="messageType">Type<span class="text-danger"><strong> *</strong></span></label>
-			<div class="col-md-12">
-				<ng-select id="messageType" name="type" [items]="typeOptions" [(ngModel)]="message.type" bindValue="value" bindLabel="display" style="width: 350px"></ng-select>
-			</div>
+		<div class="form-group">
+			<label class="form-required" for="messageType">Type</label>
+			<ng-select id="messageType" name="type" [items]="typeOptions" [(ngModel)]="message.type" bindValue="value" bindLabel="display" style="width: 350px"></ng-select>
 		</div>
 
 		<!-- Title -->
-		<div class="form-group row">
-			<label class="col-md-12" for="title">Title<span class="text-danger"><strong> *</strong></span></label>
-			<div class="col-md-12"><input type="text" class="form-control" id="title" name="title" [(ngModel)]="message.title" required /></div>
+		<div class="form-group">
+			<label class="form-required" for="title">Title</label>
+			<input type="text" class="form-control" id="title" name="title" [(ngModel)]="message.title" required />
 		</div>
 
 		<!-- Body -->
-		<div class="form-group row">
-			<label class="col-md-12" for="text">Message Body<span class="text-danger"><strong> *</strong></span></label>
-			<div class="col-md-12">
-				<textarea style="height: 4.5rem" class="form-control" id="text" name="text" [(ngModel)]="message.body" required></textarea>
+		<div class="form-group">
+			<label class="form-required" for="text">Message Body</label>
+			<textarea rows="6" class="form-control" id="text" name="text" [(ngModel)]="message.body" required></textarea>
+		</div>
+
+		<!-- Buttons -->
+		<div class="form-group">
+			<div class="text-right">
+				<button type="button" class="btn btn-link mr-2" [routerLink]="['/admin/messages']">Cancel</button>
+				<button type="submit" class="btn btn-primary" [disabled]="okDisabled">{{okButtonText}}</button>
 			</div>
 		</div>
 
-		<div class="form-group row" *ngIf="error">
-			<div class="col-md-12">
-				<div class="text-danger">
-					<strong>{{error}}</strong>
-				</div>
-			</div>
-		</div>
-
-		<!-- Butttons -->
-		<div class="form-group row">
-			<div class="col-md-12">
-				<div class="pull-right">
-					<button type="button" class="btn btn-link mr-2" [routerLink]="['/admin/messages']"> Cancel</button>
-					<button class="btn btn-primary" (click)="submit()" [disabled]="okDisabled">{{okButtonText}}</button>
-				</div>
-			</div>
+		<div class="form-group" *ngIf="error">
+			<div class="text-right text-danger font-weight-bolder">{{error}}</div>
 		</div>
 
 	</form>
