--- a/src/app/core/teams/create-team/create-team.component.html
+++ b/src/app/core/teams/create-team/create-team.component.html
@@ -8,11 +8,12 @@
 	<!-- Alert Notifications -->
 	<system-alert></system-alert>
 
-	<form #form="ngForm" autocomplete="off" role="form" novalidate>
-		<h3>
+	<form #form="ngForm" autocomplete="off" class="pt-3" role="form" (ngSubmit)="save()" novalidate>
+
+		<h1>
 			Create Team<br/>
 			<small>Provide some basic metadata to create a new team</small>
-		</h3>
+		</h1>
 
 		<!-- Required Indicator -->
 		<div>
@@ -56,7 +57,7 @@
 		<!-- Description -->
 		<div class="form-group">
 			<label for="description">Description</label>
-			<textarea rows="2" class="form-control" id="description" name="description" [(ngModel)]="team.description"></textarea>
+			<textarea rows="3" class="form-control" id="description" name="description" [(ngModel)]="team.description"></textarea>
 		</div>
 
 		<!-- External Groups -->
@@ -66,12 +67,13 @@
 		</div>
 
 		<div class="form-group">
-			<div class="float-right">
+			<div class="text-right">
 				<!--&lt;!&ndash;<asy-loading-animation text="" *ngIf="submitting"></asy-loading-animation>&ndash;&gt;-->
 				<button type="button" class="btn btn-link mr-1" routerLink="/teams">Cancel</button>
-				<button type="button" class="btn btn-primary" (click)="save()" [disabled]="!form.form.valid">Create</button>
+				<button type="submit" class="btn btn-primary" [disabled]="!form.form.valid">Create</button>
 			</div>
 		</div>
+
 	</form>
 
 </section>
