--- a/src/app/site/example/grid/grid.component.html
+++ b/src/app/site/example/grid/grid.component.html
@@ -1,5 +1,6 @@
-<h3>Stacked to horizontal</h3>
-<h5>Standard</h5>
+<h1 class="pb-3">Bootstrap Grid Examples</h1>
+<h2>Stacked to horizontal</h2>
+<h3>Standard</h3>
 <div class="container">
 	<div class="row">
 		<div class="col-lg-8">col-lg-8</div>
@@ -12,7 +13,7 @@
 	</div>
 </div>
 
-<h5>Nav Aware</h5>
+<h3>Nav Aware</h3>
 <div class="container">
 	<div class="row">
 		<div class="col-na-lg-8">col-na-lg-8</div>
@@ -25,8 +26,8 @@
 	</div>
 </div>
 
-<h3>Mix and Match</h3>
-<h5>Standard</h5>
+<h2 class="pt-2">Mix and Match</h2>
+<h3>Standard</h3>
 <div class="container">
 	<!-- Stack the columns on mobile by making one full-width and the other half-width -->
 	<div class="row">
@@ -48,7 +49,7 @@
 	</div>
 </div>
 
-<h5>Nav Aware</h5>
+<h3>Nav Aware</h3>
 <div class="container">
 	<!-- Stack the columns on mobile by making one full-width and the other half-width -->
 	<div class="row">
