refactor(common): Update multi-select-input to simplify ControlValueAccessor implementation
onChange and onTouch events for ControlValueAccessor where implemented to handle multiple event listeners.  Discovered that this is unnecessary While looking at source for angular built in value accessors.  Updating to match angular approach of only supporting single listener for each event.

--- a/src/app/common/multi-select-input/multi-select-input.component.html
+++ b/src/app/common/multi-select-input/multi-select-input.component.html
@@ -5,8 +5,8 @@
 	[hideSelected]="true"
 	[isOpen]="autocompleteOpen"
 	(add)="onAdd()"
-	[searchFn]="noResults"
 	(search)="onSearch($event)"
+	(focus)="onTouched()"
 	placeholder="{{ placeholder }}"
 	[(ngModel)]="value">
 </ng-select>
