fix: Lazy modules fixes
Once integrated downstream, lazy modules were very small due to integration points in the lazy modules.  Refactored things to better separate these integration points from the rest of code in these modules.

--- a/src/app/common/admin/admin.component.scss
+++ b/src/app/common/admin/admin.component.scss
@@ -1,5 +1,5 @@
 @import '../../../styles/overrides';
-@import '../site-container/shared';
+@import '../../core/site-container/shared';
 
 $admin-section-padding-y: $site-content-padding-y;
 
