fix: Consistent spacing for elements displayed in cards.

--- a/src/app/core/teams/view-team/view-team.component.html
+++ b/src/app/core/teams/view-team/view-team.component.html
@@ -24,7 +24,7 @@
 					<div class="card-header d-flex align-items-center">
 						<h2>Members</h2>
 					</div>
-					<div class="card-body">
+					<div class="card-body pb-1">
 						<list-team-members [team]="team"></list-team-members>
 					</div>
 				</div>
@@ -83,7 +83,7 @@
 					class="btn btn-primary ml-2">Save</button>
 		</span>
 		<h3>Basic Information</h3>
-		<table class="table table-striped table-inline-edit mb-0">
+		<table class="table table-striped table-inline-edit">
 			<tbody>
 			<tr>
 				<td>Name</td>
