fix: Update access control checks
Feedback flyout and dialog should only be accessible if user is authenticated.
Teams and Messages should only be accessible if user has 'user' role.

--- a/src/app/core/site-container/site-container.component.html
+++ b/src/app/core/site-container/site-container.component.html
@@ -42,4 +42,6 @@
 
 </footer>
 
-<app-feedback-flyout *ngIf="showFeedbackFlyout"></app-feedback-flyout>
+<ng-container *isAuthenticated>
+	<app-feedback-flyout *ngIf="showFeedbackFlyout"></app-feedback-flyout>
+</ng-container>
