feat: Remove excess spacing in nav-bar.  Add hover bg color for logo.  Use css to flip double-arrow vs. alternate image.

--- a/src/app/core/site-navbar/_shared.scss
+++ b/src/app/core/site-navbar/_shared.scss
@@ -23,6 +23,7 @@ $nav-element-active-indicator-width: 4px !default;
 $nav-element-divider-margin: 10px !default;
 
 $nav-element-logo-color-bg: $ux-color-brand-background !default;
+$nav-element-logo-hover-color-bg: $ux-color-primary-medium !default;
 $nav-element-logo-img-margin: 4px !default;
 $nav-element-logo-img-height: 50px !default;
 
