feat: replace float-right styles with flex for improved positioning

--- a/src/app/core/admin/user-management/manage-user.component.html
+++ b/src/app/core/admin/user-management/manage-user.component.html
@@ -10,15 +10,16 @@
 
 	<form *ngIf="user" #form="ngForm" autocomplete="off" class="pt-3" style="max-width: 1000px" role="form" (ngSubmit)="submit()" novalidate>
 
-		<h1>
-			{{title}}
-			<small>{{subtitle}}</small>
-
+		<div class="d-flex">
+			<h1>
+				{{title}}
+				<small>{{subtitle}}</small>
+			</h1>
 			<!-- Show control to re-sync the user's cache when proxy-pki is the auth strategy -->
-			<button [disabled]="refreshing" *ngIf="proxyPki && mode === 'edit'" (click)="refreshCredentials()" class="btn btn-primary btn-sm float-right">
-				<span class="fa fa-refresh"></span> Refresh User Credentials
+			<button [disabled]="refreshing" *ngIf="proxyPki && mode === 'edit'" (click)="refreshCredentials()" class="btn btn-primary ml-auto">
+				<span class="fa fa-refresh mr-2"></span> Refresh User Credentials
 			</button>
-		</h1>
+		</div>
 
 		<!-- Name -->
 		<div class="form-group pt-3">
